--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "google-api-python-client>=2.181.0",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
+    "groq>=0.31.0",
     "mcp>=1.13.1",
     "python-dateutil>=2.9.0.post0",
+    "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
 ]
